Fixed overflow issue on safari

--- a/src/app/editor/editor.component.css
+++ b/src/app/editor/editor.component.css
@@ -10,8 +10,12 @@
   margin: 0;
 }
 
-.content {
+.sequence, .editor {
   height: calc(100% - 62px) !important;
+}
+
+.content {
+  height: 100%;
 }
 
 .sequence .content {
